[package]
name = "form"
version = "0.1.0"
authors = ["AbdelmonemMohamed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
actix-form-data = "0.5.0-alpha.0"
bytes = "0.5.0"
futures = "0.3.4"

async-fs = "1.2.1"
anyhow = "1.0"
futures-lite = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing-subscriber = { version = "0.2.5", features = ["fmt", "tracing-log"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }